dropshot/tests/fail/bad_trait_endpoint9.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, impl HttpResponseError>
  --> tests/fail/bad_trait_endpoint9.rs:19:7
   |
19 | trait MyApi {
   |       ^^^^^

error: endpoint `bad_endpoint` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_trait_endpoint9.rs:27:24
   |
27 |         _params: Query<QueryParams>,
   |                        ^^^^^^^^^^^
